<resources>
    <string name="app_name">Calculadora</string>
    <string name="cero"></string>
    <string name="signo">+/-</string>
    <string name="btnac">AC</string>
    <string name="btnmasmenos">+/-</string>
    <string name="btndel">DEL</string>
    <string name="btndivision">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnmultiplicacion">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnresta">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn0">0</string>
    <string name="btnpunto">.</string>
    <string name="btnigual">=</string>
    <string name="btnsuma">+</string>

</resources>
